# Coral

./: .clang-format  .gitignore  Build.sh  GenerateInterop.bat  LICENSE  README.md  Setup.bat  premake5-managed.lua  premake5-native.lua  premake5.lua
Coral.Generator/: premake5.lua
Coral.Generator/Source/: DebugUtils.cs  IFileGenerator.cs  NativeCallableMethodList.cs  NativeCallablesCPPGenerator.cs  NativeCallablesCSharpGenerator.cs  NativeTypeTranslationList.cs  Program.cs
Coral.Managed/: Coral-StaticProject.csproj  Coral.Managed-Static.csproj  Coral.Managed.runtimeconfig.json  premake5.lua
Coral.Managed/Source/: AssemblyLoader.cs  Dummy.cpp  ExtensionMethods.cs  GarbageCollector.cs  InternalCalls.cs  Interop.cs  InteropTypes.cs  MSBuildRunner.cs  Main.cs  ManagedHost.cs  ManagedObject.cs  Marshalling.cs  NativeAttributes.cs  NativeLogger.cs  TypeHelper.cs  TypeInterface.cs  TypeNotFoundException.cs  UniqueList.cs
Coral.Native/: premake5.lua
Coral.Native/Include/Coral/: Array.hpp  Assembly.hpp  Attribute.hpp  CSString.hpp  Core.hpp  DotnetServices.hpp  FieldInfo.hpp  GC.h  GC.hpp  HostInstance.hpp  Interop.hpp  ManagedField.hpp  ManagedMethod.hpp  ManagedObject.hpp  ManagedType.hpp  Memory.hpp  MessageLevel.hpp  MethodInfo.hpp  NativeArray.hpp  NativeString.hpp  PropertyInfo.hpp  ReflectionType.cpp  ReflectionType.hpp  StableVector.hpp  String.hpp  StringHelper.hpp  Type.hpp  TypeCache.hpp  Utility.hpp
Coral.Native/Source/: CoralPCH.cpp  CoralPCH.hpp
Coral.Native/Source/Coral/: Assembly.cpp  AssemblyManager.hpp  Attribute.cpp  CSString.cpp  CoralManagedFunctions.hpp  DotnetServices.cpp  FieldInfo.cpp  GC.cpp  HostFXRErrorCodes.hpp  HostInstance.cpp  ManagedObject.cpp  Memory.cpp  MethodInfo.cpp  NativeString.cpp  PropertyInfo.cpp  ReflectionType.cpp  String.cpp  StringHelper.cpp  Type.cpp  TypeCache.cpp  Verify.hpp
Example/Example.Managed/: Example.Managed-Static.csproj  premake5.lua
Example/Example.Managed/Source/: Main.cs
Example/Example.Native/: premake5.lua
Example/Example.Native/Source/: Main.cpp
NetCore/7.0.7/: libnethost.lib  nethost.lib
Premake/: CSExtensions.lua  DebuggerTypeExtension.lua
Scripts/Linux/: Build.sh
Scripts/Windows/: BuildManaged.bat  Setup.bat
Scripts/macOS/: Build.sh
Testing/: premake5.lua
Testing.Managed/: premake5.lua
Testing.Managed/Source/: FieldMarshalTest.cs  Main.cs  MemberMethodTest.cs
Testing/Source/: Main.cpp
Tests/Testing.Managed/: Testing.Managed-Static.csproj  premake5.lua
Tests/Testing.Managed/Source/: FieldMarshalTest.cs  Main.cs  NuGetTest.cs  VirtualMethodTests.cs
Tests/Testing.Native/: premake5.lua
Tests/Testing.Native/Source/: Main.cpp
cmake/: CMakeLists.txt
